overflow fix

--- a/css/faces.css
+++ b/css/faces.css
@@ -5,6 +5,7 @@ article[who]::before {
   float: left;
   aspect-ratio: 1/1;
   height: 97px;
+  margin-left: -112px;
   content: "";
   background: url('/images/faces/Unknown.png') center/100% 100%;
   margin-right: 15px;
